--- a/rhapsody-sampler-bin/Rhapsody Sampler.desktop
+++ b/rhapsody-sampler-bin/Rhapsody Sampler.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Version=1.0
 Name=Rhapsody
-Comment=Librewave Multisample Sampler/Rompler
+Comment=Librewave Multisample Sampler/Rompler (Standalone)
 Exec=/usr/bin/Rhapsody
 Icon=/usr/share/icons/hicolor/458x458/apps/rhapsody-sampler.png
 Terminal=false
