--- a/amp-locker/Amp Locker.desktop
+++ b/amp-locker/Amp Locker.desktop
@@ -4,5 +4,6 @@ Version=1.0
 Name=Amp Locker
 Comment=Audio Assault Multiamp Simulator (Standalone)
 Exec="/usr/bin/Amp Locker Standalone"
+Icon=/usr/share/icons/hicolor/192x192/apps/amp-locker.png
 Terminal=false
 Categories=Audio;Video;Multimedia;
