--- a/amp-locker/PKGBUILD
+++ b/amp-locker/PKGBUILD
@@ -8,9 +8,12 @@ license=('EULA')
 groups=('pro-audio' 'vst-plugins' 'vst3-plugins')
 depends=('libcurl-gnutls' 'glibc')
 makedepends=('xdg-user-dirs' 'unzip')
-source=("Amp Locker.desktop" 'Amp Locker Linker')
-sha256sums=('fe6cee49b8b72f0c0efefe3af7ef1fa1f18343efeb139a795f05b07552d65239'
-            '088a438fe8f8c045c6a6d662e55671c84d36ee6ec4ce1dee4a6b6ec3f334d559')
+source=('Amp Locker.desktop'
+        'Amp Locker Linker'
+        'amp-locker.png')
+sha256sums=('bf96a43b2fd3a794bfad335d227526d3ddf85e9d9d95924dd3595ddecc5f15ef'
+            '088a438fe8f8c045c6a6d662e55671c84d36ee6ec4ce1dee4a6b6ec3f334d559'
+            '2ccb54d693ba09c2f86750891f2d1ea090f74fe282c3268617d1519b58f79ad5')
 
 prepare () {
 	## Extract AIR Impulse Response
@@ -26,6 +29,7 @@ package_amp-locker-standalone-bin() {
     install -Dm755 "$srcdir/Amp Locker Linker" "$pkgdir/usr/bin/Amp Locker Linker"
     install -Dm755 "$srcdir/Amp Locker Standalone" "$pkgdir/usr/bin/Amp Locker Standalone"
     install -Dm644 "$srcdir/Amp Locker.desktop" "$pkgdir/usr/share/applications/Amp Locker.desktop"
+    install -Dm644 "$srcdir/amp-locker.png" "$pkgdir/usr/share/icons/hicolor/192x192/apps/amp-locker.png"
 }
 
 package_amp-locker-vst-bin() {
