Update .desktop files to be easily searchable in the menus

--- a/aeolus-next/Aeolus Next.desktop
+++ b/aeolus-next/Aeolus Next.desktop
@@ -5,5 +5,7 @@ Name=Aeolus Next
 Comment=Aeolus Pipe Organ Simulation (Standalone)
 Exec="/usr/bin/Aeolus Next"
 Icon=/usr/share/icons/hicolor/64x64/apps/aeolus-next.png
+Categories=AudioVideo;Audio;X-Jack;Midi;X-MIDI;
 Terminal=false
-Categories=Audio;Video;Multimedia;
+Type=Application
+Keywords=Audio;Synth;Organ;Midi;Jack
