--- a/rhapsody-sampler-bin/Rhapsody Sampler.desktop
+++ b/rhapsody-sampler-bin/Rhapsody Sampler.desktop
@@ -5,5 +5,7 @@ Name=Rhapsody
 Comment=Librewave Multisample Sampler/Rompler (Standalone)
 Exec=/usr/bin/Rhapsody
 Icon=/usr/share/icons/hicolor/458x458/apps/rhapsody-sampler.png
+Categories=AudioVideo;Audio;X-Jack;Midi;X-MIDI;
 Terminal=false
-Categories=Audio;Video;Multimedia;
+Type=Application
+Keywords=Audio;Sampler;Rompler;Midi;Jack
