--- a/vital-synth/Vital Synth.desktop
+++ b/vital-synth/Vital Synth.desktop
@@ -5,5 +5,7 @@ Name=Vital Synth
 Comment=Spectral warping wavetable synth (Standalone)
 Exec=/usr/bin/Vital
 Icon=/usr/share/icons/hicolor/256x256/apps/vital-synth.png
+Categories=AudioVideo;Audio;X-Jack;Midi;X-MIDI;
 Terminal=false
-Categories=Audio;Video;Multimedia;
+Type=Application
+Keywords=Audio;Synth;Wavetable;Midi;Jack
