--- a/amp-locker/Amp Locker.desktop
+++ b/amp-locker/Amp Locker.desktop
@@ -5,5 +5,7 @@ Name=Amp Locker
 Comment=Audio Assault Multiamp Simulator (Standalone)
 Exec="/usr/bin/Amp Locker Standalone"
 Icon=/usr/share/icons/hicolor/192x192/apps/amp-locker.png
+Categories=AudioVideo;Audio;X-Jack;Midi;X-MIDI;
 Terminal=false
-Categories=Audio;Video;Multimedia;
+Type=Application
+Keywords=Audio;Guitar;Amplifier;Midi;Jack
