--- a/amp-locker/PKGBUILD
+++ b/amp-locker/PKGBUILD
@@ -1,12 +1,12 @@
 pkgbase=amp-locker
 pkgname=('amp-locker-standalone-bin' 'amp-locker-vst-bin' 'amp-locker-vst3-bin')
 pkgver=1.0.8
-pkgrel=2
+pkgrel=3
 arch=('x86_64')
 url="https://audioassault.mx/collections/amp-locker-gear/products/amp-locker"
 license=('EULA')
 groups=('pro-audio' 'vst-plugins' 'vst3-plugins')
-depends=('libcurl-gnutls' 'glibc')
+depends=('alsa-lib' 'bzip2' 'brotli' 'freetype2' 'glibc' 'graphite' 'harfbuzz' 'keyutils' 'krb5' 'libcurl-gnutls' 'libffi' 'libnghttp2' 'libidn2' 'libp11-kit' 'libpng' 'libpsl' 'libssh2' 'libtasn1' 'libunistring' 'libxau' 'libxcb' 'libx11' 'nettle' 'openssl' 'pcre2' 'zlib' 'zstd')
 makedepends=('xdg-user-dirs' 'unzip')
 source=('Amp Locker.desktop'
         'Amp Locker Linker'
