--- a/tal-noisemaker/PKGBUILD
+++ b/tal-noisemaker/PKGBUILD
@@ -7,7 +7,7 @@ groups=('pro-audio')
 pkgdesc="A Free Soft Synth By TAL Software"
 url="https://tal-software.com/products/tal-noisemaker"
 license=('EULA')
-depends=('glibc' 'libcurl-gnutls')
+depends=('alsa-lib' 'bzip2' 'brotli' 'freetype2' 'glibc' 'graphite' 'harfbuzz' 'libpng' 'pcre2')
 source=('https://tal-software.com/downloads/plugins/TAL-NoiseMaker_64_linux.zip')
 sha256sums=('328565e646f98f14dd931a33fa438a4c9eddc451e759b92d1005f4336fa3fd20')
 
