--- a/collab3/PKGBUILD
+++ b/collab3/PKGBUILD
@@ -1,11 +1,11 @@
 pkgbase=collab3
 pkgname=("$pkgbase-standalone-bin" "$pkgbase-vst-bin")
 pkgver=1.0.0
-pkgrel=2
+pkgrel=3
 arch=('x86_64')
 license=('EULA')
 url="https://github.com/augustofilocamo/superOrgan"
-depends=('glibc' 'libcurl-gnutls')
+depends=('alsa-lib' 'bzip2' 'brotli' 'freetype2' 'glibc' 'graphite' 'harfbuzz' 'krb5' 'libpng' 'libxau' 'libxext' 'libxcb' 'libx11' 'pcre2' 'zlib')
 source=("https://github.com/augustofilocamo/superOrgan/releases/download/v${pkgver}/CollaB3-Installer-${pkgver}.sh"
 		"collab3.png"
 		"CollaB3.desktop")
