--- a/rhapsody-sampler-bin/PKGBUILD
+++ b/rhapsody-sampler-bin/PKGBUILD
@@ -1,12 +1,12 @@
 pkgbase=rhapsody-sampler
 pkgname=("$pkgbase-standalone-bin" "$pkgbase-vst3-bin")
 pkgver=2.3.3
-pkgrel=2
+pkgrel=3
 arch=('x86_64')
 license=('EULA')
 url="https://librewave.com/rhapsody/"
 source=('Rhapsody Sampler.desktop')
-depends=('glibc' 'libcurl-gnutls')
+depends=('alsa-lib' 'bzip2' 'brotli' 'curl' 'freetype2' 'glibc' 'graphite' 'harfbuzz' 'keyutils' 'krb5' 'libcurl-gnutls' 'libnghttp2' 'libnghttp3' 'libidn2' 'libpng' 'libpsl' 'libssh2' 'libunistring' 'nettle' 'openssl' 'pcre2' 'zlib' 'zstd')
 makedepends=('xdg-user-dirs' 'unzip')
 sha256sums=('6b68320ae7932b5bb707ead91f46fc8a44d42dcd7811305c2da3c05e4e37785d')
 
