--- a/archlinux-studio-tweaks/rtc_timer_tweak.service
+++ b/archlinux-studio-tweaks/rtc_timer_tweak.service
@@ -2,7 +2,7 @@
 Description=RTC Timer Tweak
 
 [Service]
-ExecStart=/usr/bin/max_rtc_timer.sh
+ExecStart=/usr/bin/max_rtc_timer
 
 [Install]
 WantedBy=multi-user.target
